--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "speak-tts": "^2.0.8",
+    "translate": "^1.4.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
